switched to BIQU EBB42 CAN V1.1, no eddy installed

--- a/macros.cfg
+++ b/macros.cfg
@@ -25,7 +25,7 @@ gcode:
 
 #  {% if STATE != "paused" %}
     SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
-    SET_LED LED="extruder" RED=1 GREEN=0.65 BLUE=0 TRANSMIT=1 #orange, pause
+#    SET_LED LED="extruder" RED=1 GREEN=0.65 BLUE=0 TRANSMIT=1 #orange, pause
     
     M118 Pause print    
     
@@ -50,12 +50,21 @@ gcode:
   M118 Resume print  
   # restore extruder temperature  
 
-  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
+#  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
   M118 Resume print, heat nozzle up to {last_extruder_temp}°C
   M109 S{last_extruder_temp}
 
+  SAVE_GCODE_STATE NAME=_RESUME
+
+  {% if printer.extruder.can_extrude %}
+    M83 # relative extrusion
+    G1 E5 F{10 * 60} # retract filament
+  {% endif %}
+
+  RESTORE_GCODE_STATE NAME=_RESUME
+
   RESUME_BASE {rawparams}
-  SET_LED LED="extruder" RED=1 GREEN=1 BLUE=1 TRANSMIT=1 #white, print
+#  SET_LED LED="extruder" RED=1 GREEN=1 BLUE=1 TRANSMIT=1 #white, print
 
 [gcode_macro CANCEL_PRINT]
 description: Cancel the actual running print
@@ -65,13 +74,13 @@ gcode:
   M118 Cancel print
   SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
 
-  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=1 TRANSMIT=1 #cyan, shutdown
+#  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=1 TRANSMIT=1 #cyan, shutdown
   _PARK 
   _SHUTDOWN    
 
   CANCEL_PRINT_BASE {rawparams}
 
-  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=0 TRANSMIT=1 #green, ready
+#  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=0 TRANSMIT=1 #green, ready
 
 [gcode_macro START_PRINT]
 description: Internal 
@@ -79,7 +88,7 @@ description: Internal
   triggered by slicer 
 gcode:
   SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
-  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
+#  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
 
   CLEAR_PAUSE
   BED_MESH_PROFILE LOAD=default  
@@ -100,7 +109,7 @@ gcode:
 
   {% set BED_TEMP_CURRENT = printer.heater_bed.temperature %}
 
-  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
+#  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
 
   M190 S{BED_TEMP}
 
@@ -109,7 +118,7 @@ gcode:
     G4 P{ 5 * 60 * 1000 }            
   {% endif %}  
 
-  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
+#  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
 
   # Init
   M83 # relative extrusion mode
@@ -129,14 +138,14 @@ gcode:
   G0 Z25 F{15 * 60}
   G0 X{MIN_X} Y{MAX_Y * 0.8} F{50 * 60}
 
-  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
+#  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
   
   M118 Heat Nozzle ({EXTRUDER_TEMP}°C)
   M104 S{EXTRUDER_TEMP}  
 
   M109 S{EXTRUDER_TEMP}
 
-  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
+#  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
   _PRIME_LINE
  
   M117
@@ -145,7 +154,7 @@ gcode:
 #  G90 # Reset to absolut mode
 #  M82
   
-  SET_LED LED="extruder" RED=1 GREEN=1 BLUE=1 TRANSMIT=1 #white, print
+#  SET_LED LED="extruder" RED=1 GREEN=1 BLUE=1 TRANSMIT=1 #white, print
 
 [gcode_macro END_PRINT]
 description: Internal
@@ -155,7 +164,7 @@ variable_unload_filament: 0
 variable_power_off: 0
 gcode:
   SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
-  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=1 TRANSMIT=1 #cyan, shutdown
+#  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=1 TRANSMIT=1 #cyan, shutdown
   M118 End print
   
   _PARK
@@ -167,14 +176,14 @@ gcode:
   _SHUTDOWN  
 
   {% if power_off > 0  %}    
-    SET_LED LED="extruder" RED=1 GREEN=1 BLUE=0 TRANSMIT=1 #orange, pause
+#    SET_LED LED="extruder" RED=1 GREEN=1 BLUE=0 TRANSMIT=1 #orange, pause
     SET_LED LED="chamber" RED=0.25 GREEN=0.25 BLUE=0 WHITE=0 TRANSMIT=1
 
     M118 Power off after cooldown extruder
     POWER_OFF NOCHECK=1
     
   {% else %}
-    SET_LED LED="extruder" RED=0 GREEN=1 BLUE=0 TRANSMIT=1 #green, ready
+ #   SET_LED LED="extruder" RED=0 GREEN=1 BLUE=0 TRANSMIT=1 #green, ready
   {% endif %}  
 
 [gcode_macro UNLOAD_ON_END_PRINT]
@@ -277,10 +286,10 @@ gcode:
       {% set PARK_Z = printer.toolhead.axis_maximum.z %}
     {% endif %}
 
-  #  {% if printer.extruder.can_extrude %}
-  #    M83 # relative extrusion
-  #    G1 E-1 F{40 * 60} # retract filament
-  #  {% endif %}
+    {% if printer.extruder.can_extrude %}
+      M83 # relative extrusion
+      G1 E-1 F{40 * 60} # retract filament
+    {% endif %}
   {% endif %}  
 
   G91  
@@ -303,18 +312,18 @@ gcode:
     M118 Idle timeout, hotend cooldown
 
     M104 S0  # cooldown the hotend
-    SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
+    SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 SYNC=0 TRANSMIT=1
   {% else %}
     M118 Idle timeout, poweroff
     
     _SHUTDOWN
     M84    
 
-    SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=0.25 TRANSMIT=1
+    SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=0.25 SYNC=0 TRANSMIT=1
   {% endif %}  
 
 #[delayed_gcode _report_temp]
-# initial_duration: 2.
+#initial_duration: 2.
 [gcode_macro _report_temp]
 gcode:
 
@@ -376,12 +385,12 @@ gcode:
     {% endif %}  
   {% endif %}  
 
-  SET_LED LED="extruder" RED={NRED} GREEN={NGREEN} BLUE={NBLUE} TRANSMIT=1
+#  SET_LED LED="extruder" RED={NRED} GREEN={NGREEN} BLUE={NBLUE} SYNC=0 TRANSMIT=1
 
-  SET_LED LED="chamber" RED={PBRED} GREEN={PBGREEN} BLUE={PBBLUE} WHITE={PBWHITE} INDEX=1 TRANSMIT=0
-  SET_LED LED="chamber" RED={PBRED} GREEN={PBGREEN} BLUE={PBBLUE} WHITE={PBWHITE} INDEX=2 TRANSMIT=0
-  SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} INDEX=3 TRANSMIT=0
-  SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} INDEX=4 TRANSMIT=1
+  SET_LED LED="chamber" RED={PBRED} GREEN={PBGREEN} BLUE={PBBLUE} WHITE={PBWHITE} SYNC=0 INDEX=24 TRANSMIT=0
+  SET_LED LED="chamber" RED={PBRED} GREEN={PBGREEN} BLUE={PBBLUE} WHITE={PBWHITE} SYNC=0 INDEX=25 TRANSMIT=0
+  SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} SYNC=0 INDEX=1 TRANSMIT=0
+  SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} SYNC=0 INDEX=2 TRANSMIT=1
   
   UPDATE_DELAYED_GCODE ID=_report_temp DURATION=2
 
@@ -397,7 +406,7 @@ gcode:
     
     G91
     G92 E0
-    G1 E{load_distance} F{300}
+    G1 E{load_distance} F{350}
 
     RESTORE_GCODE_STATE NAME=load_filament_state
 
@@ -414,6 +423,6 @@ gcode:
     G91
     G92 E0
     G1 E2 F300
-    G1 E-{unload_distance} F{900} # fast-unload
+    G1 E-{unload_distance} F{700} # fast-unload
     
     RESTORE_GCODE_STATE NAME=unload_filament_state
