--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -15,14 +15,14 @@ default_printer: SidewinderX2
 
 [preheat PLA]
 extruder: 210
-heater_bed: 70
+heater_bed: 65
 
 [preheat PETG]
 extruder: 235
-heater_bed: 100
+heater_bed: 80
 
 [preheat FLEX]
-extruder: 220
+extruder: 225
 heater_bed: 55
 
 [preheat ASA]
@@ -30,7 +30,7 @@ extruder: 245
 heater_bed: 110
 
 [preheat ABS]
-extruder: 235
+extruder: 245
 heater_bed: 105
 
 
@@ -41,7 +41,6 @@ heater_bed: 105
 #~# language = en
 #~# print_estimate_method = slicer
 #~# screen_blanking = off
-#~# side_macro_shortcut = False
 #~# confirm_estop = True
 #~# only_heaters = True
 #~# use_dpms = False
@@ -62,6 +61,7 @@ heater_bed: 105
 #~# temperature_sensor cb1 = False
 #~# temperature_sensor manta = False
 #~# heater_bed = False
+#~# extruder = False
 #~# 
 #~# [spoolman]
 #~# hide_archived = False
