--- a/printer.cfg
+++ b/printer.cfg
@@ -5,7 +5,7 @@
 
 [printer]
 kinematics: cartesian
-max_velocity: 250
+max_velocity: 300
 max_accel: 2500 
 max_z_velocity: 30  
 max_z_accel: 500
@@ -13,24 +13,43 @@ max_z_accel: 500
 #square_corner_velocity: 5
 
 [extruder]
-step_pin: PE2
-dir_pin: PB4
-enable_pin: !PC11
+step_pin: EBBCan: PD0
+dir_pin: !EBBCan: PD1
+enable_pin: !EBBCan: PD2
+heater_pin: EBBCan: PB13
+sensor_pin: EBBCan: PA3
+
+#step_pin: PE2
+#dir_pin: PB4
+#enable_pin: !PC11
 microsteps: 256
 gear_ratio: 7:1
 rotation_distance: 24.665 # 24.555 # 24.52
-heater_pin: PE3 # HE0
-sensor_pin: PA1 # T0
-sensor_type: NTC 100K MGB18-104F39050L32 #Generic 3950 ##264 # NTC 100K MGB18-104F39050L32 ##248 #EPCOS 100K B57560G104F ##264
+#heater_pin: PE3 # HE0
+#sensor_pin: PA1 # T0
+sensor_type: NTC 100K MGB18-104F39050L32
 control: pid
-pid_kp: 13.618
-pid_ki: 0.347
-pid_kd: 133.797
+pid_Kp: 12.685 
+pid_Ki: 0.447 
+pid_Kd: 89.904
+
+# last calibr
+# pid_kp = 11.229
+# pid_ki = 0.219
+# pid_kd = 144.007
+
+# from scratch
+# Beginnen Sie mit Ki und Kd auf Null. 
+#pid_Kp: 10.5  #Erhöhen Sie Kp, bis das System schnell reagiert, aber nicht stark schwingt.
+#pid_Ki: 0.35  #Erhöhen Sie Ki langsam, um den bleibenden Fehler zu eliminieren. Achten Sie darauf, dass das System stabil bleibt und nicht zu stark oszilliert.
+#pid_Kd: 100  #Erhöhen Sie Kd, um Schwingungen zu reduzieren und die Systemstabilität zu erhöhen. Stellen Sie sicher, dass das System nicht zu empfindlich auf Rauschen reagiert.
+
 min_temp: 10
 max_temp: 273
 nozzle_diameter: 0.4 # 0.6
 filament_diameter: 1.75
-pressure_advance: 0.036  # 0.4er Nozzle 0.028-0.030 ## 0.6er Nozzle 0.018-0.020 
+pressure_advance: 0.035  # 0.4er Nozzle 0.028-0.030 ## 0.6er Nozzle 0.018-0.020 
+pressure_advance_smooth_time: 0.010
 #max_extrude_only_velocity: 60  # 165 # --> vol flow 22mm³/s, 21 are about 165
 #max_extrude_only_accel: 1000 #250  ## calc: 3000> 698; 2500> 582
 min_extrude_temp: 167 #165
@@ -38,18 +57,18 @@ max_extrude_only_distance: 300
 #max_extrude_cross_section: 2  # default 0.4*0.4*4.0
 
 [firmware_retraction]
-retract_length: 1
+retract_length: 0.5
 retract_speed: 40
 unretract_speed: 40
 
 [heater_bed]
 heater_pin: PB7
 sensor_pin: PA0 # THB
-sensor_type: EPCOS 100K B57560G104F #EPCOS 100K B57560G104F
+sensor_type: EPCOS 100K B57560G104F
 control: pid
-pid_kp: 50.241
-pid_ki: 1.735
-pid_kd: 363.616
+pid_kp = 50.229
+pid_ki = 1.529
+pid_kd = 412.509
 min_temp: 10
 max_temp: 135
 
@@ -66,11 +85,12 @@ fade_end: 3
 adaptive_margin: 10
 
 [probe]
-pin: ^!PB2 # high-level triggered
+#pin: ^!PB2 # high-level triggered
+pin: ^!EBBCan:PB8
 deactivate_on_each_sample: false
 x_offset: 27 # Actual installed offset of MicroProbe
 y_offset: -23 # Actual installed offset of MicroProbe
-#z_offset: 1.270
+z_offset: 1.36
 lift_speed: 20
 activate_gcode:
   SET_PIN PIN=_probe_enable VALUE=1
@@ -117,18 +137,10 @@ z_hop: 5
 z_hop_speed: 20
 
 [input_shaper]
-#Fitted shaper 'zv' frequency = 52.2 Hz (vibrations = 1.0%, smoothing ~= 0.063)
-#To avoid too much smoothing with 'zv', suggested max_accel <= 10600 mm/sec^2
-#Fitted shaper 'mzv' frequency = 53.2 Hz (vibrations = 0.0%, smoothing ~= 0.072)
-#To avoid too much smoothing with 'mzv', suggested max_accel <= 8300 mm/sec^2
-shaper_freq_x: 52.2
-shaper_type_x: zv
-#Fitted shaper 'zv' frequency = 29.8 Hz (vibrations = 1.6%, smoothing ~= 0.173)
-#To avoid too much smoothing with 'zv', suggested max_accel <= 3200 mm/sec^2
-#Fitted shaper 'mzv' frequency = 30.4 Hz (vibrations = 0.0%, smoothing ~= 0.220)
-#To avoid too much smoothing with 'mzv', suggested max_accel <= 2700 mm/sec^2
-shaper_freq_y: 29.8
-shaper_type_y: zv
+shaper_freq_x: 54.4
+shaper_type_x: zv #mzv
+shaper_freq_y: 38
+shaper_type_y: ei
 
 [stepper_x]
 step_pin: PC9
@@ -163,7 +175,7 @@ microsteps: 32 # 64
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -0.5
-position_max: 380
+position_max: 395
 homing_speed: 10 
 
 [stepper_z1]
@@ -174,7 +186,8 @@ microsteps: 32 # 64
 rotation_distance: 8
 
 [tmc2209 extruder]
-uart_pin: PC10
+#uart_pin: PC10
+uart_pin: EBBCan: PA15
 #diag_pin: PF3
 interpolate: False
 stealthchop_threshold: 999999
@@ -209,13 +222,15 @@ stealthchop_threshold: 999999
 run_current: 0.9 # 0.650 # 1.0218
 
 [fan]
-pin: PE6
+#pin: PE6
+pin: EBBCan: PA0
 off_below: 0.03
 #cycle_time: 0.1
 #hardware_pwm: True
 
 [heater_fan extruder]
-pin: PE0
+#pin: PE0
+pin: EBBCan: PA1
 heater: extruder
 heater_temp: 50.0
 off_below: 0.15
@@ -267,18 +282,34 @@ aliases:
 #samples_tolerance_retries: 3
 
 [output_pin _probe_enable]
-pin: PB1 # The control IO on the SKR 3 is PE5
+#pin: PB1 # The control IO on the SKR 3 is PE5
+pin: EBBCan:PB9
 value: 0 # Probe default stow
 
-[adxl345]
+[adxl345 bed]
 cs_pin: PC4
 spi_software_sclk_pin: PA5
 spi_software_mosi_pin: PA6
 spi_software_miso_pin: PA7 # PB15
-axes_map: -y, x, z # -y, x, z
+axes_map: x, y, z
+
+#[adxl345 extruder2]
+#cs_pin: PC4
+#spi_software_sclk_pin: PA5
+#spi_software_mosi_pin: PA6
+#spi_software_miso_pin: PA7 # PB15
+#axes_map: -y, -z, x
+
+[adxl345 extruder]
+cs_pin: EBBCan: PB12
+spi_software_sclk_pin: EBBCan: PB10
+spi_software_mosi_pin: EBBCan: PB11
+spi_software_miso_pin: EBBCan: PB2
+axes_map: -z,x,-y
 
 [resonance_tester]
-accel_chip: adxl345
+accel_chip_x: adxl345 extruder
+accel_chip_y: adxl345 bed
 probe_points:
     150, 150, 20
 
@@ -330,13 +361,17 @@ insert_gcode:
 #pause_delay:
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_1E00140013504B4633373520-if00
+# serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_1E00140013504B4633373520-if00
+canbus_uuid: 4a0cb5640a86
 
-[neopixel extruder]
-pin: PA9
-initial_RED: 0
-initial_GREEN: 1.0
-initial_BLUE: 0
+[mcu EBBCan]
+canbus_uuid: c239709a91c7
+
+#[neopixel extruder]
+#pin: PA9
+#initial_RED: 0
+#initial_GREEN: 1.0
+#initial_BLUE: 0
 
 [neopixel chamber]
 pin: PB15
@@ -373,7 +408,7 @@ resolution: 0.1
 [virtual_sdcard]
 path: ~/printer_data/gcodes
 on_error_gcode:   
-  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=0 TRANSMIT=1 #red, error
+  #SET_LED LED="extruder" RED=1 GREEN=0 BLUE=0 TRANSMIT=1 #red, error
   #CANCEL_PRINT
   TURN_OFF_HEATERS
   M106 S0 # Turn of extruder-fan
@@ -397,22 +432,19 @@ timeout: 900   # in seconds
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [probe]
-#*# z_offset = 1.420
-#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.190000, -0.207500, -0.132500, -0.077500, -0.046250, -0.033750, -0.003750, -0.012500, -0.016250, -0.025000
-#*# 	-0.148750, -0.156250, -0.110000, -0.046250, -0.050000, -0.023750, -0.023750, -0.025000, -0.020000, -0.035000
-#*# 	-0.060000, -0.048750, -0.008750, 0.002500, -0.002500, 0.005000, 0.000000, -0.002500, -0.007500, -0.036250
-#*# 	-0.063750, -0.032500, 0.022500, 0.026250, 0.020000, 0.007500, 0.008750, 0.011250, -0.008750, -0.043750
-#*# 	-0.077500, -0.007500, 0.035000, 0.030000, 0.008750, 0.013750, 0.007500, -0.001250, -0.041250, -0.082500
-#*# 	-0.026250, 0.041250, 0.072500, 0.043750, 0.050000, 0.027500, 0.016250, -0.021250, -0.061250, -0.115000
-#*# 	-0.023750, 0.017500, 0.027500, 0.018750, 0.010000, 0.006250, -0.010000, -0.040000, -0.076250, -0.132500
-#*# 	-0.030000, -0.007500, -0.012500, -0.026250, -0.030000, -0.056250, -0.061250, -0.085000, -0.126250, -0.198750
-#*# 	-0.007500, -0.003750, -0.026250, -0.026250, -0.020000, -0.037500, -0.048750, -0.091250, -0.116250, -0.181250
-#*# 	-0.041250, -0.027500, -0.057500, -0.073750, -0.058750, -0.067500, -0.088750, -0.125000, -0.175000, -0.220000
+#*# 	  -0.087500, -0.123750, -0.103750, -0.071250, -0.066250, -0.080000, -0.066250, -0.088750, -0.095000, -0.122500
+#*# 	  -0.052500, -0.085000, -0.057500, -0.038750, -0.053750, -0.050000, -0.058750, -0.068750, -0.063750, -0.088750
+#*# 	  -0.015000, -0.017500, -0.015000, -0.007500, -0.028750, -0.027500, -0.033750, -0.048750, -0.043750, -0.068750
+#*# 	  -0.030000, -0.005000, 0.015000, 0.010000, -0.005000, -0.013750, -0.027500, -0.027500, -0.043750, -0.071250
+#*# 	  -0.072500, -0.012500, 0.016250, 0.007500, -0.016250, -0.022500, -0.031250, -0.038750, -0.075000, -0.112500
+#*# 	  -0.051250, 0.008750, 0.037500, 0.011250, 0.005000, -0.013750, -0.011250, -0.026250, -0.067500, -0.100000
+#*# 	  -0.055000, -0.020000, -0.012500, -0.018750, -0.027500, -0.025000, -0.022500, -0.036250, -0.061250, -0.092500
+#*# 	  -0.127500, -0.115000, -0.107500, -0.105000, -0.101250, -0.112500, -0.096250, -0.095000, -0.102500, -0.141250
+#*# 	  -0.090000, -0.083750, -0.090000, -0.085000, -0.090000, -0.077500, -0.073750, -0.090000, -0.087500, -0.116250
+#*# 	  -0.140000, -0.125000, -0.136250, -0.132500, -0.117500, -0.100000, -0.096250, -0.113750, -0.107500, -0.121250
 #*# x_count = 10
 #*# y_count = 10
 #*# mesh_x_pps = 2
