add eddy and micropobe configs, eddy active

--- a/macros.cfg
+++ b/macros.cfg
@@ -9,7 +9,7 @@ gcode:
       
     SET_PIN PIN=printer_ac VALUE=0   
     
-    UPDATE_DELAYED_GCODE ID=_delayed_power_off DURATION=5
+    UPDATE_DELAYED_GCODE ID=_delayed_power_off DURATION=6
   {% else %}
     M118 Still printing or paused
   {% endif %}
@@ -58,7 +58,7 @@ gcode:
 
   {% if printer.extruder.can_extrude %}
     M83 # relative extrusion
-    G1 E5 F{10 * 60} # retract filament
+    G1 E5 F{10 * 60} # unretract filament
   {% endif %}
 
   RESTORE_GCODE_STATE NAME=_RESUME
@@ -91,70 +91,37 @@ gcode:
 #  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
 
   CLEAR_PAUSE
-  BED_MESH_PROFILE LOAD=default  
+  BED_MESH_CLEAR
 
-  #Get Bed and Extruder temperature from Slicer GCode
   {% set BED_TEMP = params.BED_TEMP | default(60) | float %}
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP | default(200) | float %}
+  {% set ADAPTIVE_MESH = params.ADAPTIVE_MESH | default(1) | int %}
 
   {% set MIN_X = printer.toolhead.axis_minimum.x | float %}
   {% set MIN_Y = printer.toolhead.axis_minimum.y | float %}
   {% set MAX_X = printer.toolhead.axis_maximum.x | float %}
   {% set MAX_Y = printer.toolhead.axis_maximum.y | float %}
 
-  #M118 Pre-Heat Nozzle ({EXTRUDER_TEMP*0.75}°C)
-  #M104 S{EXTRUDER_TEMP*0.75}
-
-  M118 Heat Bed ({BED_TEMP}°C)
-
-  {% set BED_TEMP_CURRENT = printer.heater_bed.temperature %}
-
-#  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
-
   M190 S{BED_TEMP}
-
-  {% if BED_TEMP_CURRENT < BED_TEMP - 20 %}
-    M118 Wait 5 min for the bed temperature to settle
-    G4 P{ 5 * 60 * 1000 }            
-  {% endif %}  
-
-#  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
-
-  # Init
+  M104 S{EXTRUDER_TEMP*0.70}  
+  
+  G28
+  {% if ADAPTIVE_MESH == 1  %}  
+    BED_MESH_CALIBRATE PROFILE=adapt ADAPTIVE=1 # METHOD=rapid_scan  #METHOD=scan
+  {% else %}
+    BED_MESH_PROFILE LOAD=default
+  {% endif %}
+ 
   M83 # relative extrusion mode
   G90 # use absolute coordinates
   G92 E0 # reset extruder
+  G0 X{MIN_X} Y{MAX_Y} Z50 F{100 * 60}  
 
-  # Home
-  {% if 'xy' in printer.toolhead.homed_axes %}
-	G28 Z
-  {% else %}
-    G28
-  {% endif %}
+  M109 S{EXTRUDER_TEMP}  
 
-  BED_MESH_CLEAR
-  BED_MESH_CALIBRATE PROFILE=adapt ADAPTIVE=1 #METHOD=scan
-
-  G0 Z25 F{15 * 60}
-  G0 X{MIN_X} Y{MAX_Y * 0.8} F{50 * 60}
-
-#  SET_LED LED="extruder" RED=1 GREEN=0 BLUE=1 TRANSMIT=1 #purple, heatup
-  
-  M118 Heat Nozzle ({EXTRUDER_TEMP}°C)
-  M104 S{EXTRUDER_TEMP}  
-
-  M109 S{EXTRUDER_TEMP}
-
-#  SET_LED LED="extruder" RED=0 GREEN=0 BLUE=1 TRANSMIT=1 #blue, start
   _PRIME_LINE
  
-  M117
   G92 E0 # reset extruder  
-  
-#  G90 # Reset to absolut mode
-#  M82
-  
-#  SET_LED LED="extruder" RED=1 GREEN=1 BLUE=1 TRANSMIT=1 #white, print
 
 [gcode_macro END_PRINT]
 description: Internal
@@ -164,9 +131,7 @@ variable_unload_filament: 0
 variable_power_off: 0
 gcode:
   SET_LED LED="chamber" RED=0 GREEN=0 BLUE=0 WHITE=1 TRANSMIT=1
-#  SET_LED LED="extruder" RED=0 GREEN=1 BLUE=1 TRANSMIT=1 #cyan, shutdown
-  M118 End print
-  
+ 
   _PARK
 
   {% if unload_filament > 0  %}    
@@ -176,14 +141,10 @@ gcode:
   _SHUTDOWN  
 
   {% if power_off > 0  %}    
-#    SET_LED LED="extruder" RED=1 GREEN=1 BLUE=0 TRANSMIT=1 #orange, pause
     SET_LED LED="chamber" RED=0.25 GREEN=0.25 BLUE=0 WHITE=0 TRANSMIT=1
 
     M118 Power off after cooldown extruder
     POWER_OFF NOCHECK=1
-    
-  {% else %}
- #   SET_LED LED="extruder" RED=0 GREEN=1 BLUE=0 TRANSMIT=1 #green, ready
   {% endif %}  
 
 [gcode_macro UNLOAD_ON_END_PRINT]
@@ -223,9 +184,6 @@ gcode:
   {% set MIN_Y = printer.toolhead.axis_minimum.y | float %}
   {% set MAX_X = printer.toolhead.axis_maximum.x | float %}
   {% set MAX_Y = printer.toolhead.axis_maximum.y | float %}
-  {% set START_X = MIN_X | float %}
-  {% set START_Y = MAX_Y * 0.8 | float %}
-  {% set START_Z = 25 | float %}
 
   {% set DIAMETER_NOZZLE = printer.configfile.settings.extruder.nozzle_diameter | float %}
   {% set DIAMETER_FILAMENT = printer.configfile.settings.extruder.filament_diameter | float %}
@@ -246,27 +204,31 @@ gcode:
   {% set MOVE_LENGTH = NOZZLE_VOLUME / EXT_CROSSSECTION | float %}
   {% set FILA_LENGTH = NOZZLE_VOLUME / CROSSSECTION_FILAMENT | float %}
 
-  G90 ; use absolute coordinates
-  G92 E0 ; reset extruder position 
-  M83 # E Relative
+  {% set START_X = MIN_X | float %}
+  {% set START_Y = MIN_Y+MOVE_LENGTH | float %}
+  {% set START_Z = 2 | float %}
 
   M118 Purge Nozzle  
 
-  G0 X{START_X} Y{START_Y} Z{START_Z} F{50 * 60} ; go to start position
+  G90 ; use absolute coordinates
+  G92 E0 ; reset extruder position 
+  M83 # E Relative
+  
+  G0 X{START_X} Y{START_Y} Z{START_Z} F{45 * 60} ; go to start position
 
   G91
-
-  G1 E2 F{20 * 60} ; deretraction after the initial one before nozzle cleaning
-
   G1 Y{"%.3f" % (-0.25 * MOVE_LENGTH)} Z{"%.3f" % ((-1.0 * START_Z) + EXT_HEIGHT_DEFAULT)} E{FILA_LENGTH * 0.25} F{8.5 * 60}
   G1 Y{"%.3f" % (-0.25 * MOVE_LENGTH)} E{FILA_LENGTH * 0.25} F{8.5 * 60}
   G1 Y{"%.3f" % (-0.25 * MOVE_LENGTH)} E{FILA_LENGTH * 0.25} F{11 * 60}
   G1 Y{"%.3f" % (-0.25 * MOVE_LENGTH)} E{FILA_LENGTH * 0.25} F{13.5 * 60} 
 
   M118 Wipe Nozzle
+ 
+  G0 X{"%.3f" % (+3)} Z{"%.3f" % (0.05 - EXT_HEIGHT_DEFAULT)} F{150 * 60} ; wipe, move close to the bed  
+  G0 X{"%.3f" % (+3)} Z{"%.3f" % (EXT_HEIGHT_DEFAULT - 0.05 + 2)} F{150 * 60} ; wipe, move quickly away from the bed
 
-  G0 Y{"%.3f" % (-3)} Z{"%.3f" % (0.05 - EXT_HEIGHT_DEFAULT)} F{135 * 60} ; wipe, move close to the bed  
-  G0 Y{"%.3f" % (-3)} Z{"%.3f" % (EXT_HEIGHT_DEFAULT - 0.05)} F{135 * 60} ; wipe, move quickly away from the bed
+  G90
+  G0 Z2 F{20 * 60}
 
   RESTORE_GCODE_STATE NAME=_fd_prime_line_state_b
 
@@ -277,11 +239,14 @@ gcode:
   M118 Park extruder
 
   {% set PARK_X = printer.toolhead.axis_minimum.x | float %}
-  {% set PARK_Y = printer.toolhead.axis_maximum.y * 0.8| float %}
-  {% set PARK_Z = printer.toolhead.position.z | float %}
+  {% set PARK_Y = printer.toolhead.axis_maximum.y | float %}
+  {% set PARK_Z = printer.toolhead.position.z + 5 | float %}
 
   {% if not (printer.toolhead.position.x == PARK_X and printer.toolhead.position.y == PARK_Y) %}
-    {% set PARK_Z = printer.toolhead.position.z + 50.0 | float %}  
+    {% if PARK_Z < 50 %}
+      {% set PARK_Z = 50 | float %}  
+    {% endif %}
+    
     {% if PARK_Z > printer.toolhead.axis_maximum.z %}
       {% set PARK_Z = printer.toolhead.axis_maximum.z %}
     {% endif %}
@@ -293,11 +258,10 @@ gcode:
   {% endif %}  
 
   G91  
-  G0 Z3 F{15 * 60}
+  G0 Z3 F{20 * 60}
 
   G90 # use absolute coordinates  
-  G0 X{PARK_X} Y{PARK_Y} F{150 * 60} # move to corner of the bed to avoid ooze over centre
-  G0 Z{PARK_Z} F{15 * 60} # move to corner of the bed to avoid ooze over centre
+  G0 X{PARK_X} Y{PARK_Y} Z{PARK_Z} F{100 * 60} # move to corner of the bed to avoid ooze over centre  
 
   RESTORE_GCODE_STATE NAME=_fd_park_state   
 
@@ -324,7 +288,7 @@ gcode:
 
 #[delayed_gcode _report_temp]
 #initial_duration: 2.
-[gcode_macro _report_temp]
+[gcode_macro report_temp]
 gcode:
 
   {% set BED_TEMP_CURRENT = printer.heater_bed.temperature %}
@@ -392,7 +356,7 @@ gcode:
   SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} SYNC=0 INDEX=1 TRANSMIT=0
   SET_LED LED="chamber" RED={PNRED} GREEN={PNGREEN} BLUE={PNBLUE} WHITE={PNWHITE} SYNC=0 INDEX=2 TRANSMIT=1
   
-  UPDATE_DELAYED_GCODE ID=_report_temp DURATION=2
+#  UPDATE_DELAYED_GCODE ID=_report_temp DURATION=2
 
 [gcode_macro LOAD_FILAMENT]
 description: KlipperScreen
