--- a/moonraker.conf
+++ b/moonraker.conf
@@ -35,10 +35,10 @@ load_on_startup: False
 #   the job_transition_delay nor the job_transition_gcode are
 #   applied in this case.  The default is False.
 
-[spoolman]
-server: http://192.168.40.6:7912
-#   URL to the Spoolman instance. This parameter must be provided.
-sync_rate: 5
+#[spoolman]
+#server: http://192.168.40.6:7912
+##   URL to the Spoolman instance. This parameter must be provided.
+#sync_rate: 5
 
 [octoprint_compat]
 
@@ -73,6 +73,6 @@ origin: https://github.com/mainsail-crew/crowsnest.git
 managed_services: crowsnest
 install_script: tools/pkglist.sh
 
-[include moonraker-obico-update.cfg]
+#[include moonraker-obico-update.cfg]
 
 # moonraker.conf
