--- a/printer.cfg
+++ b/printer.cfg
@@ -1,7 +1,8 @@
 [include macros.cfg]
+[include eddy.cfg]
+#[include microprobe.cfg]
 #[include elis-macros.cfg]
 #[include moonraker_obico_macros.cfg]
-
 
 [printer]
 kinematics: cartesian
@@ -24,7 +25,7 @@ sensor_pin: EBBCan: PA3
 #enable_pin: !PC11
 microsteps: 256
 gear_ratio: 7:1
-rotation_distance: 24.665 # 24.555 # 24.52
+rotation_distance: 24.575 
 #heater_pin: PE3 # HE0
 #sensor_pin: PA1 # T0
 sensor_type: NTC 100K MGB18-104F39050L32
@@ -32,27 +33,15 @@ control: pid
 pid_Kp: 12.685 
 pid_Ki: 0.447 
 pid_Kd: 89.904
-
-# last calibr
-# pid_kp = 11.229
-# pid_ki = 0.219
-# pid_kd = 144.007
-
-# from scratch
-# Beginnen Sie mit Ki und Kd auf Null. 
-#pid_Kp: 10.5  #Erhöhen Sie Kp, bis das System schnell reagiert, aber nicht stark schwingt.
-#pid_Ki: 0.35  #Erhöhen Sie Ki langsam, um den bleibenden Fehler zu eliminieren. Achten Sie darauf, dass das System stabil bleibt und nicht zu stark oszilliert.
-#pid_Kd: 100  #Erhöhen Sie Kd, um Schwingungen zu reduzieren und die Systemstabilität zu erhöhen. Stellen Sie sicher, dass das System nicht zu empfindlich auf Rauschen reagiert.
-
 min_temp: 10
 max_temp: 273
 nozzle_diameter: 0.4 # 0.6
 filament_diameter: 1.75
-pressure_advance: 0.035  # 0.4er Nozzle 0.028-0.030 ## 0.6er Nozzle 0.018-0.020 
+pressure_advance: 0.03  # 0.4er Nozzle 0.028-0.030 ## 0.6er Nozzle 0.018-0.020 
 pressure_advance_smooth_time: 0.010
 #max_extrude_only_velocity: 60  # 165 # --> vol flow 22mm³/s, 21 are about 165
 #max_extrude_only_accel: 1000 #250  ## calc: 3000> 698; 2500> 582
-min_extrude_temp: 167 #165
+min_extrude_temp: 15 #167 
 max_extrude_only_distance: 300
 #max_extrude_cross_section: 2  # default 0.4*0.4*4.0
 
@@ -66,79 +55,15 @@ heater_pin: PB7
 sensor_pin: PA0 # THB
 sensor_type: EPCOS 100K B57560G104F
 control: pid
-pid_kp = 50.229
-pid_ki = 1.529
-pid_kd = 412.509
+pid_kp: 50.229
+pid_ki: 1.529
+pid_kd: 412.509
 min_temp: 10
 max_temp: 135
 
-[bed_mesh]
-speed: 250
-horizontal_move_z: 3.5 # > 2.8
-mesh_min: 28, 28 
-mesh_max: 272, 272
-algorithm: bicubic
-probe_count: 10, 10
-#mesh_pps: 2, 2
-fade_start: 0.6
-fade_end: 3
-adaptive_margin: 10
-
-[probe]
-#pin: ^!PB2 # high-level triggered
-pin: ^!EBBCan:PB8
-deactivate_on_each_sample: false
-x_offset: 27 # Actual installed offset of MicroProbe
-y_offset: -23 # Actual installed offset of MicroProbe
-z_offset: 1.36
-lift_speed: 25
-activate_gcode:
-  SET_PIN PIN=_probe_enable VALUE=1
-  G4 P500 # Allow 500 milliseconds for probe deploy
-deactivate_gcode:
-  SET_PIN PIN=_probe_enable VALUE=0
-
-#[probe_eddy_current btt_eddy]
-#sensor_type: ldc1612
-#i2c_bus: i2c2_PB13_PB14
-#x_offset: 34
-#y_offset: 21.23
-#z_offset: 1.5
-#reg_drive_current: 15
-
-#[force_move]
-#enable_force_move: True
-
-#[gcode_macro _SET_Z_FROM_PROBE]
-#gcode:
-#    {% set cf = printer.configfile.settings %}
-#    SET_GCODE_OFFSET Z={printer.probe.last_z_result - cf.probe_eddy_current.z_offset}
-
-#[homing_override]
-#gcode:
-#  {% if 'xy' in printer.toolhead.homed_axes %}
-#    G0 X150 Y150 F1000
-#	G28 Z
-#  {% else %}
-#    G28
-#  {% endif %}
-#  
-#  _SET_Z_FROM_PROBE  
-#axes: z
-
-#disable heaters on homing
-#[homing_heaters]
-#steppers: stepper_z, stepper_z1
-
-[safe_z_home]
-home_xy_position: 23, 73  #116, 129 # 150,173 # 128,173
-speed: 250
-z_hop: 5
-z_hop_speed: 25
-
 [input_shaper]
-shaper_freq_x: 54.4
-shaper_type_x: zv #mzv
+shaper_freq_x: 57.8
+shaper_type_x: mzv
 shaper_freq_y: 38
 shaper_type_y: ei
 
@@ -234,21 +159,20 @@ pin: EBBCan: PA1
 heater: extruder
 heater_temp: 50.0
 off_below: 0.15
-#cycle_time: 0.1
-#fan_speed: 1 
-#shutdown_speed: 1
 
 #[controller_fan case]
 #pin: PC12
-#off_below: 0.4
-##cycle_time: 0.1
-#shutdown_speed: 1
+
 [controller_fan case]
 pin: PB8
 tachometer_pin: PC14
 hardware_pwm: True
-fan_speed: 0.5
+fan_speed: 0.6
 idle_speed: 0.33
+#shutdown_speed: 0.33
+off_below: 0.15
+
+
 
 [board_pins]
 aliases:
@@ -313,29 +237,6 @@ accel_chip_y: adxl345 bed
 probe_points:
     150, 150, 20
 
-[bed_screws]
-screw1: 23,73 #eddy# 16,28
-screw1_name: front left
-screw2: 223,73 #eddy# 216,28
-screw2_name: front right
-screw3: 223, 273 #eddy# 216,228
-screw3_name: back right
-screw4: 23, 273 #eddy# 16,228
-screw4_name: back left
-speed: 250.0
-
-[screws_tilt_adjust]
-screw1: 23,73 #eddy# 16,28
-screw1_name: front left
-screw2: 223,73 #eddy# 216,28
-screw2_name: front right
-screw3: 223, 273 #eddy# 216,228
-screw3_name: back right
-screw4: 23, 273 #eddy# 16,228
-screw4_name: back left
-speed: 250.0
-screw_thread: CW-M5
-
 [filament_switch_sensor filament_detection]
 switch_pin: ^PC5
 pause_on_runout: true
@@ -395,7 +296,7 @@ max_temp: 60
 [output_pin printer_ac]
 pin: PC3
 value: 1 #The value to initially set
-shutdown_value: 1 #The value to set the pin to on an MCU shutdown event
+shutdown_value: 0 #The value to set the pin to on an MCU shutdown event
 
 [gcode_arcs]
 resolution: 0.1
@@ -429,29 +330,4 @@ timeout: 900   # in seconds
 
 [exclude_object]
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  -0.087500, -0.123750, -0.103750, -0.071250, -0.066250, -0.080000, -0.066250, -0.088750, -0.095000, -0.122500
-#*# 	  -0.052500, -0.085000, -0.057500, -0.038750, -0.053750, -0.050000, -0.058750, -0.068750, -0.063750, -0.088750
-#*# 	  -0.015000, -0.017500, -0.015000, -0.007500, -0.028750, -0.027500, -0.033750, -0.048750, -0.043750, -0.068750
-#*# 	  -0.030000, -0.005000, 0.015000, 0.010000, -0.005000, -0.013750, -0.027500, -0.027500, -0.043750, -0.071250
-#*# 	  -0.072500, -0.012500, 0.016250, 0.007500, -0.016250, -0.022500, -0.031250, -0.038750, -0.075000, -0.112500
-#*# 	  -0.051250, 0.008750, 0.037500, 0.011250, 0.005000, -0.013750, -0.011250, -0.026250, -0.067500, -0.100000
-#*# 	  -0.055000, -0.020000, -0.012500, -0.018750, -0.027500, -0.025000, -0.022500, -0.036250, -0.061250, -0.092500
-#*# 	  -0.127500, -0.115000, -0.107500, -0.105000, -0.101250, -0.112500, -0.096250, -0.095000, -0.102500, -0.141250
-#*# 	  -0.090000, -0.083750, -0.090000, -0.085000, -0.090000, -0.077500, -0.073750, -0.090000, -0.087500, -0.116250
-#*# 	  -0.140000, -0.125000, -0.136250, -0.132500, -0.117500, -0.100000, -0.096250, -0.113750, -0.107500, -0.121250
-#*# x_count = 10
-#*# y_count = 10
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 28.0
-#*# max_x = 271.99
-#*# min_y = 28.0
-#*# max_y = 271.99000000000007
+
